--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
 
-spring.data.mongodb.uri=mongodb+srv://atlasuser:kHzbX46zpdzo8nPQ@cluster0.toze1fn.mongodb.net/tacoclouddb
+spring.data.mongodb.uri=mongodb+srv://atlasuser:MONGODB_PASSWORD@cluster0.toze1fn.mongodb.net/tacoclouddb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/tacocloud?serverTimeZone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
