애플리케이션 코드, 프로퍼티, 빌드된 JAR 파일 커밋

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8085
 spring.thymeleaf.cache=false
 
-spring.data.mongodb.uri=mongodb+srv://atlasuser:MONGODB_PASSWORD@cluster0.toze1fn.mongodb.net/tacoclouddb
+spring.data.mongodb.uri=mongodb+srv://atlasuser:${MONGODB_PASSWORD}@cluster0.toze1fn.mongodb.net/tacoclouddb
